[gd_scene load_steps=38 format=3 uid="uid://ddtwhvu0d1psn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ngg73"]
[ext_resource type="Texture2D" uid="uid://8084ru2awn7s" path="res://sprites/player.png" id="2_5kcq6"]
[ext_resource type="AudioStream" uid="uid://cqc7eky4rp2y0" path="res://sounds/thruster.wav" id="2_lq5ed"]
[ext_resource type="AudioStream" uid="uid://k6lru36ev48q" path="res://sounds/shot.wav" id="3_w52ir"]
[ext_resource type="Texture2D" uid="uid://d1vdo56rpmjfw" path="res://sprites/amogi.png" id="4_3h1j3"]
[ext_resource type="AudioStream" uid="uid://bx2odwdl72ysg" path="res://sounds/dead.wav" id="5_4ftdm"]
[ext_resource type="AudioStream" uid="uid://den1cg75s2y8m" path="res://sounds/collision.wav" id="7_2chic"]
[ext_resource type="AudioStream" uid="uid://cn10qb75ar7hy" path="res://sounds/alarm.wav" id="7_3jieg"]
[ext_resource type="Script" path="res://scripts/collision_sound_emitter.gd" id="7_lsnoe"]
[ext_resource type="AudioStream" uid="uid://bs2wklswxet57" path="res://sounds/caboom.wav" id="8_mqyp8"]
[ext_resource type="AudioStream" uid="uid://djsv374ehism7" path="res://sounds/powerup.wav" id="8_oql22"]
[ext_resource type="AudioStream" uid="uid://dt0cipmrwuees" path="res://sounds/chargeup.wav" id="9_27fah"]
[ext_resource type="AudioStream" uid="uid://bc216qpmklpjs" path="res://sounds/collision1.wav" id="10_ox2nc"]
[ext_resource type="AudioStream" uid="uid://bcct6j3y6757i" path="res://sounds/collision2.wav" id="11_34sp5"]
[ext_resource type="AudioStream" uid="uid://b8rlhmt7ufxq6" path="res://sounds/collision3.wav" id="12_vwguv"]
[ext_resource type="Script" path="res://scripts/explosion.gd" id="16_eepxe"]
[ext_resource type="Texture2D" uid="uid://b4fc5qtwvbjrv" path="res://sprites/epicness.png" id="17_8vted"]
[ext_resource type="Texture2D" uid="uid://bfha6ba6servj" path="res://sprites/shockwave.png" id="18_r2c72"]
[ext_resource type="Script" path="res://scripts/shockwave.gd" id="19_pfhmy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bxxq3"]
friction = 0.0
bounce = 0.8

[sub_resource type="CircleShape2D" id="CircleShape2D_gfv2h"]
radius = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_vj7gw"]
atlas = ExtResource("2_5kcq6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="Gradient" id="Gradient_bbe0d"]
offsets = PackedFloat32Array(0.0533333, 0.613333)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.361093, 0.253743, 1)

[sub_resource type="Curve" id="Curve_iitcm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4jheo"]
curve = SubResource("Curve_iitcm")

[sub_resource type="Gradient" id="Gradient_adcct"]
colors = PackedColorArray(1, 1, 1, 1, 0.851344, 0.369971, 5.77569e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xm4lr"]
gradient = SubResource("Gradient_adcct")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7ai65"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(0.999573, 0.98654, 0.952228, 1)
color_ramp = SubResource("GradientTexture1D_xm4lr")
alpha_curve = SubResource("CurveTexture_4jheo")

[sub_resource type="Curve" id="Curve_vsmah"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.252747, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_56lxm"]
curve = SubResource("Curve_vsmah")

[sub_resource type="Gradient" id="Gradient_8peii"]
offsets = PackedFloat32Array(0, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1)
colors = PackedColorArray(0.662351, 0.66235, 0, 1, 0.905269, 3.34509e-06, 1.15514e-06, 1, 1, 1, 1, 1, 0.905269, 3.34509e-06, 1.15514e-06, 1, 1, 1, 1, 1, 0.905269, 3.34509e-06, 1.15514e-06, 1, 1, 1, 1, 1, 0.905269, 3.34509e-06, 1.15514e-06, 1, 1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_l7onn"]
_data = [Vector2(0.746667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o5gwv"]
texture_mode = 1
curve = SubResource("Curve_l7onn")

[sub_resource type="Gradient" id="Gradient_p5gl5"]
offsets = PackedFloat32Array(0, 0.721311, 1)
colors = PackedColorArray(0.991606, 1, 0.496144, 1, 1, 0.384314, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gpdo0"]
gradient = SubResource("Gradient_p5gl5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xtqni"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
damping_min = 100.0
damping_max = 100.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_gpdo0")
alpha_curve = SubResource("CurveTexture_o5gwv")

[sub_resource type="CircleShape2D" id="CircleShape2D_mo1qa"]
radius = 130.0

[node name="Player" type="RigidBody2D"]
collision_layer = 4
collision_mask = 12
physics_material_override = SubResource("PhysicsMaterial_bxxq3")
contact_monitor = true
max_contacts_reported = 1
linear_damp = 1.0
script = ExtResource("1_ngg73")
player = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gfv2h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 0)
rotation = 1.5708
texture = SubResource("AtlasTexture_vj7gw")

[node name="ThrustSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lq5ed")
volume_db = -10.0

[node name="ThrusterParticles" type="CPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(-19, 0)
emitting = false
amount = 10
lifetime = 0.1
explosiveness = 0.5
randomness = 1.0
texture = ExtResource("4_3h1j3")
emission_shape = 3
emission_rect_extents = Vector2(0, 5)
direction = Vector2(-1, 0)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 180.0
initial_velocity_max = 220.0
linear_accel_min = -100.0
linear_accel_max = -100.0
scale_amount_max = 2.0
color = Color(0.611654, 0.804481, 0.816871, 1)
color_ramp = SubResource("Gradient_bbe0d")

[node name="ShotSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w52ir")
volume_db = -10.0

[node name="DeathSoundEmitter" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("5_4ftdm")

[node name="DeathParticles" type="GPUParticles2D" parent="."]
process_mode = 1
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_7ai65")
texture = ExtResource("4_3h1j3")
one_shot = true
explosiveness = 1.0

[node name="AlarmSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3jieg")
volume_db = -10.0

[node name="CaboomSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mqyp8")
volume_db = -10.0

[node name="ChargeupSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_27fah")

[node name="PowerupSoundEmitter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_oql22")
volume_db = -10.0

[node name="CollisionSoundEmitter" type="Node" parent="."]
script = ExtResource("7_lsnoe")

[node name="WorldBound" type="AudioStreamPlayer" parent="CollisionSoundEmitter"]
stream = ExtResource("7_2chic")
volume_db = -10.0

[node name="GeneralCollision1" type="AudioStreamPlayer" parent="CollisionSoundEmitter"]
stream = ExtResource("10_ox2nc")
volume_db = -10.0

[node name="GeneralCollision2" type="AudioStreamPlayer" parent="CollisionSoundEmitter"]
stream = ExtResource("11_34sp5")
volume_db = -10.0

[node name="GeneralCollision3" type="AudioStreamPlayer" parent="CollisionSoundEmitter"]
stream = ExtResource("12_vwguv")
volume_db = -10.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gfv2h")

[node name="Explosion" type="Node2D" parent="."]
script = ExtResource("16_eepxe")
alpha = SubResource("CurveTexture_56lxm")
color = SubResource("Gradient_8peii")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Explosion"]
emitting = false
amount = 512
process_material = SubResource("ParticleProcessMaterial_xtqni")
texture = ExtResource("4_3h1j3")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="Sprite2D" type="Sprite2D" parent="Explosion"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("17_8vted")

[node name="Shockwave" type="Sprite2D" parent="Explosion"]
modulate = Color(1, 1, 1, 0)
top_level = true
texture = ExtResource("18_r2c72")
script = ExtResource("19_pfhmy")

[node name="Area2D" type="Area2D" parent="Explosion"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion/Area2D"]
shape = SubResource("CircleShape2D_mo1qa")
